--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/header.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/header.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <link rel="stylesheet" th:href="@{css/admin/fragments/header.css}">
 </head>
 <body>
@@ -12,45 +13,43 @@
     <button id="sidebar-toggle" class="sidebar-toggle">
       <i class="fas fa-bars"></i>
     </button>
-    <a href="/Admin" >
+    <a href="/Admin">
       <img th:src="@{/images/logo/logo.png}" alt="Logo">
     </a>
   </div>
   <div class="header-right">
     <div id="clock"></div>
-    <ul class="nav-menu">
-      <li class="user-profile">
-        <div class="user-dropdown-toggle" id="user-dropdown-toggle">
-          <img th:src="@{/images/avtadmin/avarta.jpg}" alt="Logo">
-          <i class="fas fa-chevron-down"></i>
-        </div>
-        <ul class="dropdown-menu" id="user-dropdown-menu">
-          <li class="user-info">
-            <img th:src="@{/images/avtadmin/avarta.jpg}" alt="User">
-            <span class="user-name" th:text="${username}"></span>
-          </li>
-          <li>
-            <a th:href="@{/Admin/profile}">
-              <i class="fas fa-user"></i>
-              Thông tin cá nhân
-            </a>
-          </li>
-          <li>
-            <a th:href="@{/logout}" id="logout-btn">
-              <i class="fas fa-sign-out-alt"></i>
-              Đăng xuất
-            </a>
-          </li>
-        </ul>
-      </li>
-    </ul>
+    <div class="user-profile">
+      <div class="user-dropdown-toggle" id="user-dropdown-toggle">
+        <img th:src="@{/images/avtadmin/avarta.jpg}" alt="User">
+        <span class="user-display-name" th:text="${username}">Admin</span>
+        <i class="fas fa-chevron-down"></i>
+      </div>
+      <ul class="dropdown-menu" id="user-dropdown-menu">
+        <li class="user-info">
+          <img th:src="@{/images/avtadmin/avarta.jpg}" alt="User">
+          <span class="user-name" th:text="${username}">Admin</span>
+        </li>
+        <li>
+          <a th:href="@{/Admin/profile}">
+            <i class="fas fa-user"></i>
+            Thông tin cá nhân
+          </a>
+        </li>
+        <li>
+          <a th:href="@{/logout}" id="logout-btn">
+            <i class="fas fa-sign-out-alt"></i>
+            Đăng xuất
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
   <div id="logout-modal" class="modal-logout">
     <div class="modal-content">
       <p>Đăng xuất thành công</p>
     </div>
   </div>
-
 </header>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 </body>
